--- a/country-detail/country-detail.css
+++ b/country-detail/country-detail.css
@@ -141,4 +141,49 @@ p::first-letter {
   cursor: pointer;
 }
 
-/*# sourceMappingURL=styles.css.map */
+.detail-layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 2rem;
+}
+
+.info-layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.capital-grid-placement {
+  grid-area: 5/1;
+}
+
+.borderLayout {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.borderBtnLayout {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.borderBtn {
+  padding: 0.5rem 2.5rem;
+  color: hsl(0deg, 0%, 52%);
+  box-shadow: 0 0 0.25rem 0;
+  border-radius: 0.25rem;
+  background-color: hsl(0deg, 0%, 100%);
+  width: 150px;
+  border-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  cursor: pointer;
+  width: 120px;
+  padding: unset;
+}
+
+/*# sourceMappingURL=country-detail.css.map */
