--- a/styles.scss
+++ b/styles.scss
@@ -12,6 +12,22 @@ $font-weight-bold: 800;
 $homepage-item: 14px;
 $detail-page: 16px;
 
+@mixin custom-button {
+  padding: 0.5rem 2.5rem;
+  color: $dark-gray;
+  box-shadow: 0 0 0.25rem 0;
+  border-radius: 0.25rem;
+  background-color: $white;
+  width: 150px;
+  border-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  cursor: pointer;
+}
+
 html, body {
   margin: 0 2rem;
   padding: 0;
@@ -119,11 +135,11 @@ header {
   background-color: $white;
   color: $very-dark-blue-txt;
   font-size: $homepage-item;
-
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 150px;
   align-items: stretch;
+  cursor: pointer;
 }
 
 .card-info{
@@ -136,4 +152,10 @@ header {
 
 p::first-letter {
   text-transform:capitalize;
+}
+
+/* Detail country */
+
+.custom-btn{
+  @include custom-button;
 }
